--- a/.htaccess
+++ b/.htaccess
@@ -3,8 +3,8 @@ RewriteBase /
 # Prevent CI index.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule .* index.php/$0 [PT,L]
-
+#RewriteRule .* index.php/$0 [PT,L]
+RewriteRule ^(.*)$ index.php/$1 [L,QSA] 
 # Prevent user access to the CI system folder.
 RewriteCond %{REQUEST_URI} ^system.*
 RewriteRule ^(.*)$ /index.php?/$1 [L]
