--- a/.htaccess
+++ b/.htaccess
@@ -1,14 +1,4 @@
 RewriteEngine on
-RewriteBase /
-# Prevent CI index.php
-RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteRule .* index.php/$0 [PT,L]
-RewriteRule ^(.*)$ index.php/$1 [L,QSA] 
-# Prevent user access to the CI system folder.
-RewriteCond %{REQUEST_URI} ^system.*
-RewriteRule ^(.*)$ /index.php?/$1 [L]
-
-# Prevent user access to the CI application folder
-RewriteCond %{REQUEST_URI} ^application.*
-RewriteRule ^(.*)$ /index.php?/$1 [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule . index.php [L]
